# origin

./: .clabot  .gitignore  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  README.md  ROADMAP.md  test.md
.github/config/: lint_spellcheck_config.yml  lint_spellcheck_dictionary.txt
.github/workflows/: cobalt_build.yml  docker_build.yml  lint_linkcheck.yml  lint_spellcheck.yml  lint_spellcheck_config.yml  lint_spellcheck_dictionary.txt  lint_yaml.yml  repomgmt_label.yml  repomgmt_label_config.yml  repomgt_label_config.yml
blog/: README.md  _cobalt.yml  index.md
blog/_defaults/: posts.md
blog/_layouts/: default.liquid
blog/_site/: README.html  index.html  rss.xml
blog/_site/posts/: getting-started-with-retrieval.html  inference-for-fun-and-profit.html  retro-and-RAG.html
blog/posts/: getting-started-with-retrieval.md  inference-for-fun-and-profit.md  retro-and-RAG.md
cloud/core/: Dockerfile  README.md  core.py  flake.nix
golden/: README.md  bullseye.pkr.hcl
golden/cfg/: preseed.cfg
interface/chat/: package-lock.json  package.json  tailwind.config.js
interface/chat/components/: layout.jsx
interface/chat/components/chatbot/: chat-area.jsx  chat-input.jsx  chat-output.jsx  chatbot-message.jsx
interface/chat/components/containers/: chatbot-container.jsx  header-container.jsx  sidebar-container.jsx
interface/chat/pages/: _app.jsx  index.jsx
interface/chat/styles/: globals.css
kubernetes/: README.md
kubernetes/crd/: dataset.json  vectorindex.yaml
lab/: README.md  hosts  playbook.yml
lab/roles/apt_cmdline/tasks/: main.yml
lab/roles/brew_cmdline/tasks/: main.yml
lab/roles/brew_update/tasks/: main.yml
mouseion/: README.md  pyproject.toml
mouseion/datacollection_specs/: train-arxiv.json  train_realnews_dataset_spec.json
mouseion/mouseion/: dataset.py  indexbuilder.py  maketokens.py  tasks.py  train_and_build_index.py
mouseion/scripts/: s2_train_and_build_index.py  s2_train_and_build_index.sh  train_and_build_index.py
platform/: README.md
platform/Dockerfile/: Dockerfile
platform/Dockerfiles/cloud-hypervisor/: Dockerfile  build.sh
platform/Dockerfiles/faiss/: Dockerfile  build.sh  faiss-v1.7.4-introduce-epoch.patch  faiss-v1.7.4-setuppy-include-binaries.patch  faiss-v1.8.0-introduce-epoch.patch  faiss-v1.8.0-runpath-origin.patch  faiss-v1.8.0-setuppy-include-binaries.patch
platform/Dockerfiles/flashinfer/: Dockerfile  build.sh
platform/Dockerfiles/istiod/: Dockerfile  build.sh
platform/Dockerfiles/linux-kernel/: Dockerfile  build.sh  config-6.1.99
platform/Dockerfiles/llm_compressor/: Dockerfile  build.sh
platform/Dockerfiles/lm_eval/: Dockerfile  build.sh
platform/Dockerfiles/pytorch/: Dockerfile  build.sh  pytorch-compute-86-override.patch
platform/Dockerfiles/rust-hypervisor-firmware/: Dockerfile  build.sh
platform/Dockerfiles/toolchain/: Dockerfile  build.sh
platform/Dockerfiles/virtiofsd/: Dockerfile  build.sh
platform/Dockerfiles/vllm/: Dockerfile  build.sh
platform/build-faiss/: README.md  add_dev.sh  build-faiss.sh  build-prereqs.sh  build.sh
platform/dev/: add_dev.sh  build-faiss.sh  faiss-prereqs.sh  python-build-essentials.sh
platform/golden/: HYPERVISOR.md  OCINOTES.md  README.md  bookworm.pkrvars.hcl  bullseye.pkr.hcl  bullseye.pkrvars.hcl  debian-11.7.pkr.hcl  debian.json  debian.pkr.hcl  export.sh  image-cd.pkr.hcl  main.tf  require.pkr.hcl  run-bookworm.sh  run.sh  upload-image.sh
platform/golden-vm/: main.tf  retry.sh  variables.tf
platform/golden/cfg/: debian-11-preseed.cfg  preseed-deb.cfg  preseed-debian-11.cfg  preseed-debian-bookworm.cfg  preseed.cfg
platform/golden/kvm/: setup-kvm.sh
platform/golden/provisioners/: playbook.yml
platform/golden/scripts/: serial.sh
platform/golden/vbox/: start.sh  stop.sh
platform/infrastructure/: main.tf
platform/jupyter/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
platform/node/: README.md  create-cloudinit-config.sh  wise-a30x1.sh  wise-a30x2.sh  wise-a40x2.sh  wise-init.sh  wise-mount.sh
platform/node/cloudinit-config/: all-create-cloutinit-config.sh  create-cloudinit-config.sh  meta-data
platform/oci-bm-gpu-stack/: main.tf
platform/packaging/cmake/: _aw_build.sh  _aw_install.sh  _aw_prepare.sh
platform/packaging/faiss/: _aw_build.sh  _aw_install.sh  _aw_prepare.sh
platform/retro/: README.md  requirements.txt  test.py  train.py
platform/terraform/: main.tf  storage.tf  variables.tf
platform/terraform/00_init/: README.md  keygen.sh
platform/terraform/01_compartment/: README.md
platform/terraform/02_kubernetes/: README.md  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf  versions.tf
platform/terraform/03_servicemesh/: accesslogs.yaml  bridge.yaml  expose-istiod.yaml  expose-services.yaml  generate-istio-manifests.sh  install-vm-files.sh  istio-ns.yaml  meta.yaml  precheck-check-jwt-enabled.sh  run-curl.sh  values-base.yaml  values-gateway-eastwest-multi.yaml  values-gateway-multi.yaml  values-istiod-multi.yaml  workloadgroup.yaml
platform/wisdomctl/: README.md  flake.nix  pyproject.toml  wisdomctl.py
reproducible/faiss/: Dockerfile
retrieval/: requirements-override.txt  requirements-torch.txt  run_training.sh  train.py
workloads/: README.md
workloads/alexandria/: README.md
workloads/chatbots/pykoi/: README.md  llama2-chatbot-demo.py  llama2pi.service  pyproject.toml  requirements.txt
workloads/chatbots/pykoi/llama2pi/: __main__.py
workloads/dataset-controller/: Dockerfile  README.md  dataset-controller.py  flake.nix
workloads/jupyterlab/: Dockerfile  build.sh
workloads/retro-next/build_knowledge_base/: 0000_build_chunk_index.sh  0001_precompute_emdeddings.sh  0002_save_index_spec.sh  0003_train_index.sh  0004_build_index.sh  0005_generate_neighbors.sh  Dockerfile  build.sh  index-spec.json  run.sh
workloads/retroformer/: README.md  requirements.txt  train.py
workloads/vectorindex-controller/: Dockerfile  README.md  flake.nix  vectorindex-controller.py
workloads/vllm/: init.sh  run.sh
workloads/whatyouwant/: README.md
(+59 files in other folders)
