[tool.poetry]
name = "wisdomctl"
version = "0.1.0"
description = "Artificial Wisdom™ Cloud Platform CLI"
authors = ["Corbin <corbin@computelify.com>"]
license = "ASL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ocifs = "^1.2.1"
click = "^8.1.7"
pyarrow = "^13.0.0"

[tool.poetry.scripts]
wisdomctl = "wisdomctl:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
