[tool.poetry]
name = "llama2pi"
version = "0.1.0"
description = "A demonstration of a personal intelligence."
authors = ["Steven Dake <steve@computelify.com>"]
license = "ASL2"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pykoi = "^0.0.5"
torch = "^2.0.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
